Add bounded large-file open path